# calypso_os

./: .gitignore  .gitmodules  Kconfig  LICENSE  Makefile  README  README.md  add_board.sh  defconfig  patch_stack_addr.py  reader_writer  requirements.txt  sd_spi.c  tags
.github/workflows/: ccpp.yml
apps/: Kconfig  Makefile
apps/console_app/: Makefile  console_app  console_audio_player.c  console_cat.c  console_date.c  console_date.h  console_display_test.c  console_echo.c  console_free.c  (+12 more)
arch/arm/rpipico/: .gitignore  CMakeLists.txt  Makefile  README.md  board_initialize.c  bsp.c  bsp.h  context_switch.s  startup.c  uart.c
arch/arm/rpipico/include/: board.h
config/: README.md
drivers/: Kconfig  Makefile
include/: assert.h  board.h  board_cfg.h  builtin_apps.h  dirent.h  display.h  errno.h  filesystems.h  gpio.h  mtd.h  nrf52840.h  os_start.h  poll.h  semaphore.h  serial.h  spi.h  stdbool.h  stdio.h  stdlib.h  string.h  timer.h  uart.h  unistd.h  versatilepb.h  vfs.h  worker.h
lib/: Kconfig  Makefile  fatfs  fatfs_glue.c  small_printf.c  small_sscanf.c  syscall_stubs.c
patches/: 0001-Bugfix-Return-correct-status-codes-from-low-level-ac.patch  0001-Use-MMC-as-disk-number-0-in-this-system.patch  patch_fix_compilation_warnings  patch_me.sh
sched/: Kconfig  Makefile  context_switch.s  irq_manager.c  main.c  os_appstart.c  os_start.c  scheduler.c  semaphore.c  stdio.c  stdlib.c  string.c
tests/: Makefile  original_output  original_test  string_test  string_test.c
utils/: Makefile  dirent.c  poll.c  stat.c  stdlib.c  string.c  unistd.c  vfs.c  worker.c
(+282 files in other folders)
